--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <body>
 	<div class="container">
 	<div class="header">
-		<img src="image\Logo.png" class="imgLogo">
+		<img src="Logo.png" class="imgLogo">
 		<input type="text" placeholder="Nhập từ khóa..." class="tbxsearch">
 		<input type="button" value="Tìm kiếm" id="btnSearch" class="btn">
 		<input type="button" value="Giỏ hàng" id="btnGioHang" class="btn">
@@ -179,41 +179,41 @@
 				<li><a href="#">Thời trang nam</a></li>
 			</ul>
 			<div class="slide-right">
-				<a href="#"><img src="image\imgAvt.jpg" alt="avt" class="Avatar1"></a>
-				<a href="#"><img src="image\avt2.jpg" alt="avt1" class="Avatar"></a>
-				<a href="#"><img src="image\avt3.jpg" alt="avt2" class="Avatar"></a>
+				<a href="#"><img src="imgAvt.jpg" alt="avt" class="Avatar1"></a>
+				<a href="#"><img src="avt2.jpg" alt="avt1" class="Avatar"></a>
+				<a href="#"><img src="avt3.jpg" alt="avt2" class="Avatar"></a>
 			</div>
 		</div>
 		<div class="bottom-content">
 			<h3>Thời trang nữ</h3>
 			<div class="items">
 			<div class="item">
-				<img src="image\images.jpg" class="imgItem">
+				<img src="images.jpg" class="imgItem">
 				<h5 class="item-title"><a href="#">Guitar - 01</a></h5>
 				<p>250.000đ</p>
 			</div>
 			<div class="item">
-				<img src="image\images2.jpg" class="imgItem">
+				<img src="images2.jpg" class="imgItem">
 				<h5 class="item-title"><a href="#">Guitar - 02</a></h5>
 				<p>250.000đ</p>
 			</div>
 			<div class="item">
-				<img src="image\images3.jpg" class="imgItem">
+				<img src="images3.jpg" class="imgItem">
 				<h5 class="item-title"><a href="#">Guitar - 03</a></h5>
 				<p>250.000đ</p>
 			</div>
 			<div class="item">
-				<img src="image\images4.jpg" class="imgItem">
+				<img src="images4.jpg" class="imgItem">
 				<h5 class="item-title"><a href="#">Guitar - 04</a></h5>
 				<p>250.000đ</p>
 			</div>
 			<div class="item">
-				<img src="image\images5.jpg" class="imgItem">
+				<img src="images5.jpg" class="imgItem">
 				<h5 class="item-title"><a href="#">Guitar - 05</a></h5>
 				<p>250.000đ</p>
 			</div>
 			<div class="item">
-				<img src="image\images6.jpg" class="imgItem">
+				<img src="images6.jpg" class="imgItem">
 				<h5 class="item-title"><a href="#">Guitar - 06</a></h5>
 				<p>250.000đ</p>
 			</div>
@@ -223,19 +223,19 @@
 	<div class="footer">
 		<div class="footer-header">
 			<div class="icon">
-			<img src="image\icon1.png" alt="icon" class="icon-footer">
+			<img src="icon1.png" alt="icon" class="icon-footer">
 			<p class="tbxIcon">TƯ VẤN MIỄN PHÍ</p>
 			</div>
 			<div class="icon">
-			<img src="image\icon2.png" alt="icon" class="icon-footer">
+			<img src="icon2.png" alt="icon" class="icon-footer">
 			<p class="tbxIcon">THANH TOÁN KHI NHẬN HÀNG</p>
 			</div>
 			<div class="icon ">
-			<img src="image\icon4.png" alt="icon" class="icon-footer">
+			<img src="icon4.png" alt="icon" class="icon-footer">
 			<p class="tbxIcon">GIAO MIỄN PHÍ TRONG 10KM</p>
 			</div>
 			<div class="icon">
-			<img src="image\icon3.png" alt="icon" class="icon-footer">
+			<img src="icon3.png" alt="icon" class="icon-footer">
 			<p class="tbxIcon">ĐẢM BẢO CHẤT LƯỢNG</p>
 			</div>
 		</div>
