--- a/index.html
+++ b/index.html
@@ -157,26 +157,26 @@
 	</div>
 	<div class="main-menu">
 		<ul>
-			<li><a href="#">Thời trang em bé</a></li>
-			<li><a href="#">Váy & đầm</a></li>
-			<li><a href="#">Tặng quà</a></li>
-			<li><a href="#">Thời trang</a></li>
-			<li><a href="#">Thời trang biển</a></li>
-			<li><a href="#">Thời trang nữ</a></li>
-			<li><a href="#">Thời trang nam</a></li>
+			<li><a href="#">Trang chủ</a></li>
+			<li><a href="#">Sản phẩm</a></li>
+			<li><a href="#">Video</a></li>
+			<li><a href="#">Tư vấn</a></li>
+			<li><a href="#">Tin tức</a></li>
+			<li><a href="#">Giới thiệu</a></li>
+			<li><a href="#">Liên hệ</a></li>
 		</ul>
 	</div>
 	<div class="main-content">
 		<div class="top-content">
 			<ul class="menu-left">
 				<h3 style="font-weight: bold;">Danh mục</h3>
-				<li><a href="#">Thời trang em bé</a></li>
-				<li><a href="#">Váy & đầm</a></li>
-				<li><a href="#">Tặng quà</a></li>
-				<li><a href="#">Thời trang</a></li>
-				<li><a href="#">Thời trang biển</a></li>
-				<li><a href="#">Thời trang nữ</a></li>
-				<li><a href="#">Thời trang nam</a></li>
+				<li><a href="#">Trang chủ</a></li>
+				<li><a href="#">Sản phẩm</a></li>
+				<li><a href="#">Video</a></li>
+				<li><a href="#">Tư vấn</a></li>
+				<li><a href="#">Tin tức</a></li>
+				<li><a href="#">Giới thiệu</a></li>
+				<li><a href="#">Liên hệ</a></li>
 			</ul>
 			<div class="slide-right">
 				<a href="#"><img src="imgAvt.jpg" alt="avt" class="Avatar1"></a>
@@ -185,7 +185,7 @@
 			</div>
 		</div>
 		<div class="bottom-content">
-			<h3>Thời trang nữ</h3>
+			<h3>Sản phẩm hot</h3>
 			<div class="items">
 			<div class="item">
 				<img src="images.jpg" class="imgItem">
