--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 			height: 191px;
 			padding: 5px 0px 5px 5px;
 		}
+		img:hover{
+			opacity: 0.5;
+		}
 		.items {
 			display: flex;
 			flex-direction: rows;
@@ -98,6 +101,9 @@
 			padding: 10px;
 			text-align: center;
 			width: 16%;
+		}
+		.items .item p{
+			color: red;
 		}
 		.imgItem{
 			width: 140px;
