--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			margin: 0 auto;
 		}
 		.btn{
+			border-radius:10px;
 		    background-color: blue;
 		    border: none;
 		    color: white;
@@ -59,7 +60,7 @@
 			color: white;
 		}
 		.main-menu ul li a:hover{
-			color: black;
+			color: red;
 		}
 		.menu-left{
 			float: left;
