--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 			padding: 10px 10px 11px 10px;
 		}
 		.main-menu ul li a{
+			padding: 17px 20px;
+			border-right: 1px #fff solid;
 			text-decoration:none; 
 			color: white;
 		}
