--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 			color: white;
 			text-transform: uppercase;
 		}
+		.main-menu ul li a:hover{
+			color: red;
+		}
 		.menu-left{
 			float: left;
 		}
