--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 		    display: inline-block;
 		    font-size: 16px;
 		}
+		.btn:hover{
+			background: green;
+			cursor: pointer;
+		}
 		.header{
 			line-height: 60px;
 		}
