--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <body>
 	<div class="container">
 	<div class="header">
-		<img src="Logo.png" class="imgLogo">
+		<img src="https://garlicDK.github.io/Logo.png" class="imgLogo">
 		<input type="text" placeholder="Nhập từ khóa..." class="tbxsearch">
 		<input type="button" value="Tìm kiếm" id="btnSearch" class="btn">
 		<input type="button" value="Giỏ hàng" id="btnGioHang" class="btn">
@@ -192,41 +192,41 @@
 				<li><a href="#">Liên hệ</a></li>
 			</ul>
 			<div class="slide-right">
-				<a href="#"><img src="imgAvt.jpg" alt="avt" class="Avatar1"></a>
-				<a href="#"><img src="avt2.jpg" alt="avt1" class="Avatar"></a>
-				<a href="#"><img src="avt3.jpg" alt="avt2" class="Avatar"></a>
+				<a href="#"><img src="https://garlicDK.github.io/imgAvt.jpg" alt="avt" class="Avatar1"></a>
+				<a href="#"><img src="https://garlicDK.github.io/avt2.jpg" alt="avt1" class="Avatar"></a>
+				<a href="#"><img src="https://garlicDK.github.io/avt3.jpg" alt="avt2" class="Avatar"></a>
 			</div>
 		</div>
 		<div class="bottom-content">
 			<h3>Sản phẩm hot</h3>
 			<div class="items">
 			<div class="item">
-				<img src="images.jpg" class="imgItem">
+				<img src="https://garlicDK.github.io/images.jpg" class="imgItem">
 				<h5 class="item-title"><a href="#">Guitar - 01</a></h5>
 				<p>250.000đ</p>
 			</div>
 			<div class="item">
-				<img src="images2.jpg" class="imgItem">
+				<img src="https://garlicDK.github.io/images2.jpg" class="imgItem">
 				<h5 class="item-title"><a href="#">Guitar - 02</a></h5>
 				<p>250.000đ</p>
 			</div>
 			<div class="item">
-				<img src="images3.jpg" class="imgItem">
+				<img src="https://garlicDK.github.io/images3.jpg" class="imgItem">
 				<h5 class="item-title"><a href="#">Guitar - 03</a></h5>
 				<p>250.000đ</p>
 			</div>
 			<div class="item">
-				<img src="images4.jpg" class="imgItem">
+				<img src="https://garlicDK.github.io/images4.jpg" class="imgItem">
 				<h5 class="item-title"><a href="#">Guitar - 04</a></h5>
 				<p>250.000đ</p>
 			</div>
 			<div class="item">
-				<img src="images5.jpg" class="imgItem">
+				<img src="https://garlicDK.github.io/images5.jpg" class="imgItem">
 				<h5 class="item-title"><a href="#">Guitar - 05</a></h5>
 				<p>250.000đ</p>
 			</div>
 			<div class="item">
-				<img src="images6.jpg" class="imgItem">
+				<img src="https://garlicDK.github.io/images6.jpg" class="imgItem">
 				<h5 class="item-title"><a href="#">Guitar - 06</a></h5>
 				<p>250.000đ</p>
 			</div>
@@ -236,19 +236,19 @@
 	<div class="footer">
 		<div class="footer-header">
 			<div class="icon">
-			<img src="icon1.png" alt="icon" class="icon-footer">
+			<img src="https://garlicDK.github.io/icon1.png" alt="icon" class="icon-footer">
 			<p class="tbxIcon"><a href="#">TƯ VẤN MIỄN PHÍ</a></p>
 			</div>
 			<div class="icon">
-			<img src="icon2.png" alt="icon" class="icon-footer">
+			<img src="https://garlicDK.github.io/icon2.png" alt="icon" class="icon-footer">
 			<p class="tbxIcon"><a href="#">THANH TOÁN KHI NHẬN HÀNG</a></p>
 			</div>
 			<div class="icon ">
-			<img src="icon4.png" alt="icon" class="icon-footer">
+			<img src="https://garlicDK.github.io/icon4.png" alt="icon" class="icon-footer">
 			<p class="tbxIcon"><a href="#">GIAO MIỄN PHÍ TRONG 10KM</a></p>
 			</div>
 			<div class="icon">
-			<img src="icon3.png" alt="icon" class="icon-footer">
+			<img src="https://garlicDK.github.io/icon3.png" alt="icon" class="icon-footer">
 			<p class="tbxIcon"><a href="#">ĐẢM BẢO CHẤT LƯỢNG</a></p>
 			</div>
 		</div>
